# tilp_and_gfm

gfm/trunk/: Makefile.am  configure.ac
gfm/trunk/builder/: Makefile.am  README  dialogs1.ui  dialogs2.ui  dialogs3.ui  dialogs4.ui  dialogs5.ui  gfm.ui
gfm/trunk/desktop/: gfm.desktop.in
gfm/trunk/po/: POTFILES.in  fr.po
gfm/trunk/src/: Makefile.am  cmdline.c  ctree.c  ctree.h  dialog.c  file.c  file.h  filesel.c  gui.c  gui.h  labels.c  main.c  paths.c  paths.h  rwgroup.c  rwgroup.h  splashscreen.c  support.c  support.h  tilibs.c  ungroup.c  ungroup.h  version.h
